--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@capacitor/android": "^5.6.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.6.0",
+    "@capacitor/core": "^5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/live-updates": "^0.1.1-beta.4",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
